@@ -63,8 +63,6 @@ __ http://mail.python.org/pipermail/python-list/2001-April/037847.html
 
 * Separate read and write version checks?
 
-* ``bzr status FILE...``
-
 * Check all commands have decent help.
 
 * ``bzr inventory -r REV`` and perhaps unify this with ``bzr ls``,
