@@ -25,6 +25,9 @@ bzr-0.0.5  NOT RELEASED YET
     * New option ``bzr commit --file`` to take a message from a file,
       suggested by LarstiQ.
 
+    * New syntax ``bzr status [FILE...]`` contributed by Bartosz Oler.
+
+
   TESTING:
 
     * Converted black-box test suites from Bourne shell into Python;
